# tailor-cv

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  constraints.txt  docker-compose.yml  profile.example.yaml  pyproject.toml
.claude-plugin/: plugin.json
assets/: cv-pdf.css
knowledge_base/: 00-summary.md
prompts/: cover_letter_system.md.example  cv_system.md.example  cv_user.md.example  letter_user.md.example
skills/tailor-cv-knowledge-base/: SKILL.md
skills/tailor-cv-knowledge-base/references/: expand.md  init.md  prompts.md
skills/tailor-cv-knowledge-base/references/templates/: education.md  job-star.md  overview.md  skills.md
tailorcv/: __init__.py  __main__.py  cli.py  config.py  generator.py  job_input.py  knowledge_base.py  logging_setup.py  pdf.py  prompts.py  usage.py
tailorcv/llm/: __init__.py  anthropic_client.py  base.py  google_client.py
tests/: test_cli.py  test_config.py  test_generator.py  test_job_input.py  test_knowledge_base.py  test_llm_anthropic.py  test_llm_base.py  test_llm_google.py  test_logging_setup.py  test_pdf.py  test_placeholder.py  test_prompts.py  test_usage.py
