[project]
name = "tailorcv"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "weasyprint>=63",
    "firecrawl-py>=2.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tailorcv = "tailorcv.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tailorcv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
